--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicOn">
         <activity
+            android:name=".chatbot"
+            android:exported="false" />
+        <activity
             android:name=".MusicPlayerredirect"
             android:exported="false" />
         <activity
